@@ -70,8 +70,8 @@
             <!-- START NEWS -->
             <h2><a name="News"></a>News</h2>
 
-            <p><i><b>June 24th, 2012: SDCC 3.2.0 RC2 released.</b></i></p>
-            <p>SDCC 3.2.0 Release Candidate 2 source, doc and binary packages for x86 Linux,
+            <p><i><b>June 29th, 2012: SDCC 3.2.0 RC3 released.</b></i></p>
+            <p>SDCC 3.2.0 Release Candidate 3 source, doc and binary packages for x86 Linux,
               32 bit Windows and universal Mac OS X are available in corresponding folders at:
               <a href="http://sourceforge.net/projects/sdcc/files/">
               http://sourceforge.net/projects/sdcc/files/</a>.</p>
@@ -223,7 +223,13 @@
             </ul>
 
             <!-- START PAST_NEWS -->
-            <h2>Past news</h2>
+            <h2><a name="Past_news"></a>Past news</h2>
+
+            <p><i><b>June 24th, 2012: SDCC 3.2.0 RC2 released.</b></i></p>
+            <p>SDCC 3.2.0 Release Candidate 2 source, doc and binary packages for x86 Linux,
+              32 bit Windows and universal Mac OS X are available in corresponding folders at:
+              <a href="http://sourceforge.net/projects/sdcc/files/">
+              http://sourceforge.net/projects/sdcc/files/</a>.</p>
 
             <p><i><b>June 16th, 2012: SDCC 3.2.0 RC1 released.</b></i></p>
             <p>SDCC 3.2.0 Release Candidate 1 source, doc and binary packages for x86 Linux,
@@ -259,18 +265,6 @@
             <p>Numerous feature requests and bug fixes are included as well.</p>
             <p>You can download the release from:<br />
               <a href="http://sourceforge.net/projects/sdcc/files/" target="_new">http://sourceforge.net/projects/sdcc/files/</a></p>
-
-            <p><i><b>November 22nd, 2011: SDCC 3.1.0 RC3 released.</b></i></p>
-            <p>SDCC 3.1.0 Release Candidate 3 source, doc and binary packages for x86 Linux,
-              32 bit Windows and universal Mac OS X are available at:
-              <a href="http://sourceforge.net/projects/sdcc/files/snapshot_builds/sdcc-3.1.0-rc3/">
-                http://sourceforge.net/projects/sdcc/files/snapshot_builds/sdcc-3.1.0-rc3</a>.</p>
-
-            <p><i><b>November 18th, 2011: SDCC 3.1.0 RC2 released.</b></i></p>
-            <p>SDCC 3.1.0 Release Candidate 2 source, doc and binary packages for x86 Linux,
-              32 bit Windows and universal Mac OS X are available at:
-              <a href="http://sourceforge.net/projects/sdcc/files/snapshot_builds/sdcc-3.1.0-rc2/">
-                http://sourceforge.net/projects/sdcc/files/snapshot_builds/sdcc-3.1.0-rc2</a>.</p>
             <!-- END PAST_NEWS -->
 
             <p><a href="previous.php">Previous News</a></p>
